Upgraded to Java17 and Spring Boot 3.3, improved use of generics, fixed bugs